openstack_dashboard/static/dashboard/css/style.css
/* ... */
.table tfoot tr td {
  border-top: 1px solid #DDD;
  background-color: #F1F1F1;
  font-size: 11px;
  line-height: 14px;
}

.table_actions {
    float: right;
    min-width: 400px;
    margin-bottom: 10px;
}

.table_actions .table_search {
    display: inline-block;
}

.table_search input {
  background: url(../img/search.png) no-repeat 195px 5px;
  display: inline-block;
  margin-bottom: 0;
}

.table_actions a, .table_actions button {
    float: right;
    margin-left: 10px;
}

.table_actions button.filter {
  margin-left: 0;
}

.table_header .table_actions {
  min-width: 0;
}

.table_header .table_actions a, .table_header .table_actions button {
  display: inline-block;
  float: none;
}

.table_actions form {
    float: right;
    margin-left: 10px;
}

.hidden {
  display: none;
}

.table-striped tbody tr.status_unknown:nth-child(odd) td {
  background-color: #ffffb5;
}

.table-striped tbody tr.status_unknown:nth-child(even) td {
  background-color: #ffffc6;
}

.icon-updating.ajax-updating {
  background: transparent url(../img/spinner.gif) no-repeat center center;
  padding: 1px;
}

td .icon-updating.ajax-updating {
  margin-right: 5px;
}

.overview {
    font-size: 24px;
}

#monitoring {
  background: #f8f8f8;
  font-size: 14px;
  height: 20px;
  margin: -18px 0 25px;
  padding: 10px;
  border: 1px solid #e1e1e1;
  font-family: "anivers";
}

#monitoring h3{
    font-size: 14px;
    font-weight: normal;
    float: left;
    line-height: 18px;
}

#external_links, #external_links li {
    float: left;
}
#external_links li { margin: 0 0 0 15px; }

/* Forms */

form label {
    text-align: left;
    color: #555;
    font-weight: bold;
}

.modal {
    width: 700px;
    max-height: none; /* Prevents large modals from scrolling unnecessarily */
    top: 80px;
    margin-top: 0;
    position: absolute;
}

form.horizontal .form-field {
    float: left;
  }

form.horizontal.split_half .form-field {
    width: 334px; /* Fits 2 fields to a row */
}

form.horizontal.split_quarter .form-field {
    width: 167px; /* Fits 4 fields to a row */
}

form.horizontal.split_five .form-field {
    width: 133px; /* Fits 5 fields to a row */
}

form.horizontal fieldset {
    width: 100%;
}

.modal-body table {
  margin-bottom: 30px;
}

.modal-body ~ hr {
  margin-bottom: 0;
}

.static_page {
  float: left;
  width: 700px;
  background-color: #FFF;
  border: 1px solid #DDD;
}
.static_page > form {
  margin-bottom: 0;
}

.left {
    float: left;
    width: 347px;
    margin-right: 15px;
}

.left form {
  margin: 0;
}

.right {
    float: left;
    width: 308px;
}

.clear {
    clear: both;
    width: 0;
    height: 0;
    padding: 0;
    margin: 0;
}

.modal-body fieldset {
    margin: 0;
    padding: 0;
    width: 372px;
}

.modal-body fieldset ul {
    width: 90%;
}

.modal-body fieldset .form-field input,
.modal-body fieldset .form-field select,
.modal-body fieldset .form-field textarea {
  width: 90%;
}

.modal-footer input {
    width: auto;
}

.modal-body .modal-footer {
    width: 670px;
    margin-left: -25px;
    margin-right: -15px;
}

.modal-footer a.close {
  margin-top: 0;
    margin-right: 5px;
    font-size: 12px;
    color: #666;
    font-weight: normal;
  filter: alpha(opacity=100);
  -khtml-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

.modal-footer a.close:hover {
    color: #333;
    text-decoration: underline;
}

.modal-body .help-block {
    text-align: left;
    float: left;
    width: 100%;
    margin-bottom: 10px;
}

#create_keypair_modal .clearfix {
  margin-bottom: 115px;
}

#actions {
    width: 90px;
}
#actions .btn {
    margin-bottom: 5px;
}
#actions a.btn {
    width: 70px;
}

#actions input.btn {
    text-align: left;
}

#images #actions {
    width: 100px;
}

/*New List Patches*/
.details-modal .modal-body {
  padding-bottom: 20px;
}

.form-inline {
  display: inline;
}

td.select {
  width: 10px;
}

/* Actions dropdown */

td.actions_column {
  width: 150px;
  padding: 10px;
  position: relative;
  min-width: 140px;
  min-height: 20px;
}

td.actions_column .row_actions a,
td.actions_column .row_actions input,
td.actions_column .row_actions button {
  background: none;
  float: none;
  display: block;
  padding: 5px 10px;
  color: black;
  text-align: left;
  border-radius: 0;
  border: 0 none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

td.actions_column .row_actions .hide {
  display: none;
}

/* Makes size consistent across browsers when mixing "btn-group" and "small" */
.btn.hide, .btn-group .hide {
  display: none;
}
.btn-group .dropdown-toggle:focus {
  outline: none;
}
.dropdown-menu button {
  line-height: 18px; /* Matches rule for ".dropdown-menu a" in bootstrap */
  width: 100%;
}
.btn-group .dropdown-menu .btn {
  border-radius: 0;
}
.dropdown-menu .btn.btn-danger,
.dropdown-menu .btn.btn-danger:hover,
.dropdown-menu .btn.btn-success,
.dropdown-menu .btn.btn-success:hover,
.dropdown-menu .btn.btn-info,
.dropdown-menu .btn.btn-info:hover {
  text-shadow: none; /* remove default bootstrap shadowing from button text. */
}
.dropdown-menu li:hover {
  background: none;
}
.dropdown-menu li.divider:hover {
  background-color: #E5E5E5;
}
td.actions_column .dropdown-menu a:hover,
td.actions_column .dropdown-menu button:hover {
  background-color: #CDCDCD;
}
.dropdown-menu .btn.btn-danger {
  color: #C43C35;
}
.dropdown-menu .btn.btn-danger:hover {
  background-color: #f6e0df;
}


/* Overrides for single-action rows (no dropdown) */

tr td.actions_column ul.row_actions.single,
tr:hover td.actions_column ul.row_actions.single,
td.actions_column ul.row_actions.single,
td.actions_column ul.row_actions.single:hover {
  border: none;
}

td.actions_column ul.row_actions.single li.action {
  display: block;
}

td.actions_column ul.row_actions.single li.action:hover {
  background-color: transparent;
}
/* ... */

